--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -1,12 +1,25 @@
 .button {
-	border-radius: 6px;
-	padding: 8px 30px;
 	font-family: inherit;
 	cursor: pointer;
-	font-size: 16px;
 	transition: background 0.25s;
 	border: none;
 	color: var(--white-color);
+	border-radius: 29px;
+	font-style: normal;
+	font-weight: 400;
+}
+
+.small {
+	font-size: 16px;
+	padding: 10px 25px;
+}
+
+.big {
+	font-size: 15px;
+	font-weight: 600;
+	text-transform: uppercase;
+	padding: 20px 60px;
+	box-shadow: 0px 10px 40px 0px rgba(122, 129, 190, 0.16);
 }
 
 .accent {
