--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -1,3 +1,84 @@
+.link {
+	text-decoration: none;
+}
+
+.card {
+	box-shadow: 18.21429px 18.21429px 36.42857px 0px rgba(211, 209, 216, 0.25);
+	background: var(--white-color);
+	border-radius: 19px;
+	width: 320px;
+}
+
 .head {
 	position: relative;
+	min-height: 165px;
+	border-radius: 19px;
+}
+
+.price {
+	position: absolute;
+	top: 15px;
+	left: 15px;
+	background: var(--white-color);
+	padding: 3px 10px;
+	border-radius: 20px;
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 400;
+	color: #111719;
+}
+
+.currency {
+	color: var(--primary-color);
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 400;
+}
+
+.rating {
+	position: absolute;
+	bottom: -12px;
+	left: 15px;
+	background: var(--white-color);
+	padding: 3px 8px;
+	border-radius: 20px;
+	font-size: 12px;
+	font-style: normal;
+	font-weight: 400;
+	color: #111719;
+	box-shadow: 0px 6.07143px 24.28572px 0px rgba(254, 114, 76, 0.2);
+}
+
+.add-to-cart {
+	position: absolute;
+	top: 15px;
+	right: 15px;
+	background: var(--primary-color);
+	border-radius: 50%;
+	border: none;
+	width: 34px;
+	height: 34px;
+	cursor: pointer;
+}
+
+.add-to-cart:hover {
+	background: var(--primary-hover-color);
+}
+
+.footer {
+	padding: 12px;
+}
+
+.title {
+	color: var(--text-color);
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 600;
+}
+
+.description {
+	color: var(--text-secondary-color);
+	font-size: 14.571px;
+	font-style: normal;
+	font-weight: 400;
 }
