добавил компоненту Login состояние ошибки, получение текста ошибки с бэкенда, реализовал просую функцию получения данных из полей формы и отправку их на бэкенд, при корректно введённом логине и пароле успешно приходит аксес токен

--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -40,3 +40,10 @@
 	color: var(--primary-color);
 	text-decoration: none;
 }
+
+.error {
+	background: rgb(231, 83, 83);
+	color: var(--white-color);
+	padding: 20px;
+	border-radius: 10px;
+}
