--- a/src/layout/Layout/Layout.module.css
+++ b/src/layout/Layout/Layout.module.css
@@ -69,3 +69,15 @@
 	padding: 40px 60px;
 	width: 100%;
 }
+
+.cart-count {
+	background: var(--primary-color);
+	border-radius: 50%;
+	width: 20px;
+	height: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: var(--white-color);
+	font-size: 12px;
+}
