--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -1,3 +1,34 @@
 .headling {
 	margin-bottom: 41px;
 }
+
+.line {
+	display: flex;
+	justify-content: space-between;
+	padding: 17px 0;
+	max-width: 512px;
+}
+
+.line span {
+	color: var(--sub-color, #9796a1);
+}
+
+.hr {
+	max-width: 512px;
+	margin: 0;
+	border: 1px solid #f1f2f3;
+}
+
+.text {
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 400;
+	color: var(--text-color);
+}
+
+.price {
+	font-size: 19px;
+	font-style: normal;
+	font-weight: 400;
+	color: var(--text-color);
+}
